Revamp index.html with new layout and styles
Updated the HTML structure and added styles for better presentation.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="de">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Titel der Seite | Name der Website</title>
-  </head>
-  <body>
-    <!-- Sichtbarer Dokumentinhalt im body -->
-    <p>Dies ist ein möglicher Text
-      <kbd>(das ist zusätzlich)</kbd></p>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Testseite</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f0f0f0;
+      padding: 40px;
+    }
+    .box {
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+  </style>
+</head>
+<body>
+  <div class="box">
+    <h1>Meine GitHub-Pages-Seite funktioniert ✅</h1>
+    <p>Wenn du diesen Text siehst, ist alles korrekt eingerichtet.</p>
+    <p>Repository: abahmer.github.io</p>
+  </div>
+</body>
 </html>
