Update heading text in index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <div class="box">
-    <h1>Meine GitHub-Pages-Seite funktioniert ✅</h1>
+    <h1>Meine GitHub-Pages-Seite funktioniert , so</h1>
     <p>Wenn du diesen Text siehst, ist alles korrekt eingerichtet.</p>
     <p>Repository: abahmer.github.io</p>
   </div>
