--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>CS</title>
+	<title>Kleine 3d Szene</title>
 	<style>
 		body { margin: 0; overflow: hidden; background-color: #111; }
 		canvas { display: block; }
